Fixed build for windows+linux