@@ -160,21 +160,9 @@
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.8</version>
-				<executions>
-					<execution>
-						<!-- Default configuration for running with: mvn clean javafx:run -->
-						<id>default-cli</id>
-						<configuration>
-							<mainClass>com.evilu.modstaller/com.evilu.modstaller.App</mainClass>
-							<launcher>app</launcher>
-							<jlinkZipName>app</jlinkZipName>
-							<jlinkImageName>app</jlinkImageName>
-							<noManPages>true</noManPages>
-							<stripDebug>true</stripDebug>
-							<noHeaderFiles>true</noHeaderFiles>
-						</configuration>
-					</execution>
-				</executions>
+				<configuration>
+					<mainClass>com.evilu.modstaller/com.evilu.modstaller.App</mainClass>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.antlr</groupId>
@@ -202,6 +190,7 @@
 					<archive>
 						<manifestEntries>
 							<Multi-Release>true</Multi-Release>
+							<Main-Class>com.evilu.modstaller.App</Main-Class>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -235,9 +224,10 @@
 								<preCp>anything</preCp>
 							</classPath>
 							<jre>
+								<path>windows_jre</path>
 								<minVersion>1.17.0</minVersion>
 								<opts>
-									<opt>-Djava.endorsed.dirs=./endorsed</opt>
+									<opt>--module-path=windows_jre/javafx --add-modules=javafx.controls</opt>
 								</opts>
 							</jre>
 							<versionInfo>
@@ -249,7 +239,7 @@
 								<txtProductVersion>Manage and install minecraft mods</txtProductVersion>
 								<productName>ModStaller</productName>
 								<internalName>modstaller</internalName>
-								<originalFilename>original.exe</originalFilename>
+								<originalFilename>ModStaller.exe</originalFilename>
 							</versionInfo>
 						</configuration>
 					</execution>
